# ORC_predictor_MNBVC

./: 5000pdf_eda.ipynb  construct_data.ipynb  filesize_eda.ipynb  ocr_predict.py  ocr_predict_usage.md  pyproject.toml  xgb_classifier.ubj
